--- a/app/scripts/views/directive/upload/showUpload.html
+++ b/app/scripts/views/directive/upload/showUpload.html
@@ -25,62 +25,175 @@
             background: #eee;
             border-radius: 5px;
         }
+
+        .img_min {
+            max-height: 100px;
+            max-width: 100px;
+        }
+
+        .img_max {
+            max-height: 400px;
+            max-width: 400px;
+        }
     </style>
-    <table class="table table-hover table-bordered table-condensed">
-        <thead>
-        <tr>
-            <th width="50%">图片</th>
-            <th width="10%" ng-show="uploader.isHTML5">大小</th>
-            <th width="20%" ng-show="uploader.isHTML5">上传进度</th>
-            <th width="10%">状态</th>
-            <th width="10%">操作</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="(k,v) in uploader.queue track by $index" ng-required="required">
-            <td width="50%">
-                <strong class="ng-binding" ng-bind="v.file.name" ng-if="!v.qiniu_url"></strong>
-                <img class="img-responsive" ng-src="{{v.qiniu_url}}" ng-if="v.qiniu_url">
-                <div ng-show="uploader.isHTML5" ng-thumb="{ file: v._file, height: 100 , itemobj : v}"></div>
-                <a class="img_a" ng-if="v.old">
-                    <img class="img-responsive" ng-src="{{v.url}}"/>
-                </a>
-            </td>
-            <td ng-show="uploader.isHTML5">
-                <span ng-if="!v.old" ng-bind="(v.file.size/1024/1024|number:2)+'MB'"></span>
-            </td>
-            <td ng-show="uploader.isHTML5">
-                <div class="progress" style="margin-bottom: 0;">
-                    <div class="progress-bar" role="progressbar" style="width:{{v.progress}}%;"
-                         style="width: 0%;"></div>
-                </div>
-            </td>
-            <td class="text-center">
-                <div ng-if="!v.old">
-                    <span ng-show="v.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-                    <span ng-show="v.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                    <span ng-show="v.isError"><i class="glyphicon glyphicon-remove"></i></span>
-                </div>
-            </td>
-            <td>
-                <div ng-class="{'hide':disabled}">
-                    <!--<button type="button" class="btn btn-primary btn-xs btn-rounded" ng-click="addImage($index)">-->
-                    <!--<span class="glyphicon glyphicon-plus"></span> 插入-->
-                    <!--</button>-->
-                    <button type="button" class="btn btn-success btn-xs btn-rounded" ng-click="v.upload()"
-                            ng-if="!v.old"
-                            ng-disabled="v.isReady || v.isUploading || v.isSuccess">
-                        <span class="glyphicon glyphicon-upload"></span> 上传
-                    </button>
-                    <button type="button" class="btn btn-danger btn-xs btn-rounded" ng-click="delImage(k,v)"
-                            show-role="'{{disabledRole}}'">
-                        <span class="glyphicon glyphicon-trash"></span> 移除
-                    </button>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <style type="text/css">
+        .dndsimpleDemo ul[dnd-list],
+        .dndsimpleDemo ul[dnd-list] > li {
+            position: relative;
+        }
+
+        .dndsimpleDemo ul[dnd-list] {
+            min-height: 42px;
+            padding-left: 0px;
+        }
+
+        .dndsimpleDemo ul[dnd-list] .dndDraggingSource {
+            display: none;
+        }
+
+        .dndsimpleDemo ul[dnd-list] .dndPlaceholder {
+            display: block;
+            background-color: #ddd;
+            min-height: 100px;
+        }
+
+        .dndsimpleDemo ul[dnd-list] li {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-top-right-radius: 4px;
+            border-top-left-radius: 4px;
+            display: block;
+            padding: 10px 0px;
+            margin-bottom: -1px;
+        }
+
+        .dndsimpleDemo ul[dnd-list] li.selected {
+            background-color: #dff0d8;
+            color: #3c763d;
+        }
+    </style>
+    <div class="row">
+        <div class="panel panel-info" style="border: 0">
+            <!--<div class="panel-heading"></div>-->
+            <div class="panel-body dndsimpleDemo">
+                <!--<pre ng-bind="uploader.queue | json">  这个不能json </pre>-->
+                <!--<pre ng-bind="images | json"></pre>-->
+                <ul dnd-list="images" ng-init="img_min = true;"
+                    dnd-inserted="getPos(index)"
+                    class="list-group">
+                    <li ng-repeat="(k,v) in images"
+                        class="list-group-item row"
+                        dnd-draggable="v"
+                        dnd-moved="images.splice(k, 1);getEle(k);"
+                        dnd-effect-allowed="move"
+                        ng-required="required">
+                        <div dnd-nodrag>
+                            <div class="col-md-6" ng-class="{'img_min':img_min,'img_max':!img_min}">
+                                <!--<strong class="ng-binding" ng-bind="uploader.queue[k].file.name"-->
+                                <!--ng-if="!uploader.queue[k].qiniu_url"></strong>-->
+                                <img class="img-responsive" ng-class="{'img_min':img_min,'img_max':!img_min}"
+                                     ng-src="{{v.pic_url|| uploader.queue[k].qiniu_url}}"
+                                     ng-if="v.pic_url || uploader.queue[k].qiniu_url">
+                                <div ng-show="uploader.isHTML5 && !v.pic_url"
+                                     ng-thumb="{ file: uploader.queue[k]._file, height: 100 , itemobj : uploader.queue[k]}"></div>
+                            </div>
+                            <div class="col-md-2 text-center">
+                                <div ng-show="!v.pic_id">
+                                    <span ng-show="uploader.queue[k].isSuccess">
+                                        <i class="glyphicon glyphicon-ok"></i>
+                                    </span>
+                                    <span ng-show="uploader.queue[k].isCancel">
+                                        <i class="glyphicon glyphicon-ban-circle"></i>
+                                    </span>
+                                    <span ng-show="uploader.queue[k].isError">
+                                        <i class="glyphicon glyphicon-remove"></i>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-2 pull-right">
+                                <div class="progress" ng-show="!v.pic_id">
+                                    <div class="progress-bar" role="progressbar"
+                                         style="width:{{uploader.queue[k].progress}}%;"></div>
+                                </div>
+                            </div>
+                            <div class="handle col-md-2 pull-right">
+                                <div ng-class="{'hide':disabled}">
+                                    <button type="button" class="btn btn-success btn-xs btn-rounded"
+                                            ng-click="uploader.queue[k].upload()"
+                                            ng-if="!v.pic_id"
+                                            ng-disabled="uploader.queue[k].isReady || uploader.queue[k].isUploading || uploader.queue[k].isSuccess">
+                                        <span class="glyphicon glyphicon-upload"></span> 上传
+                                    </button>
+                                    <button type="button" class="btn btn-danger btn-xs btn-rounded"
+                                            ng-click="delImage(k,uploader.queue[k])"
+                                            show-role="'{{disabledRole}}'">
+                                        <span class="glyphicon glyphicon-trash"></span> 移除
+                                    </button>
+                                </div>
+                            </div>
+                            <!--<div dnd-handle class="handle col-md-1 pull-right">:::</div>-->
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--<table class="table table-hover table-bordered table-condensed">-->
+    <!--<thead>-->
+    <!--<tr>-->
+    <!--<th width="50%">图片</th>-->
+    <!--<th width="10%" ng-show="uploader.isHTML5">大小</th>-->
+    <!--<th width="20%" ng-show="uploader.isHTML5">上传进度</th>-->
+    <!--<th width="10%">状态</th>-->
+    <!--<th width="10%">操作</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
+    <!--<tbody>-->
+    <!--<tr ng-repeat="(k,v) in uploader.queue track by $index" ng-required="required">-->
+    <!--<td width="50%">-->
+    <!--<strong class="ng-binding" ng-bind="v.file.name" ng-if="!v.qiniu_url"></strong>-->
+    <!--<img class="img-responsive" style="max-height: 200px;max-width: 200px;"-->
+    <!--ng-src="{{v.qiniu_url}}" ng-if="v.qiniu_url">-->
+    <!--<div ng-show="uploader.isHTML5" ng-thumb="{ file: v._file, height: 100 , itemobj : v}"></div>-->
+    <!--<a class="img_a" ng-if="v.old">-->
+    <!--<img class="img-responsive" style="max-height: 200px;max-width: 200px;" ng-src="{{v.url}}"/>-->
+    <!--</a>-->
+    <!--</td>-->
+    <!--<td ng-show="uploader.isHTML5">-->
+    <!--<span ng-if="!v.old" ng-bind="(v.file.size/1024/1024|number:2)+'MB'"></span>-->
+    <!--</td>-->
+    <!--<td ng-show="uploader.isHTML5">-->
+    <!--<div class="progress" style="margin-bottom: 0;">-->
+    <!--<div class="progress-bar" role="progressbar" style="width:{{v.progress}}%;"-->
+    <!--style="width: 0%;"></div>-->
+    <!--</div>-->
+    <!--</td>-->
+    <!--<td class="text-center">-->
+    <!--<div ng-if="!v.old">-->
+    <!--<span ng-show="v.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>-->
+    <!--<span ng-show="v.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>-->
+    <!--<span ng-show="v.isError"><i class="glyphicon glyphicon-remove"></i></span>-->
+    <!--</div>-->
+    <!--</td>-->
+    <!--<td>-->
+    <!--<div ng-class="{'hide':disabled}">-->
+    <!--&lt;!&ndash;<button type="button" class="btn btn-primary btn-xs btn-rounded" ng-click="addImage($index)">&ndash;&gt;-->
+    <!--&lt;!&ndash;<span class="glyphicon glyphicon-plus"></span> 插入&ndash;&gt;-->
+    <!--&lt;!&ndash;</button>&ndash;&gt;-->
+    <!--<button type="button" class="btn btn-success btn-xs btn-rounded" ng-click="v.upload()"-->
+    <!--ng-if="!v.old"-->
+    <!--ng-disabled="v.isReady || v.isUploading || v.isSuccess">-->
+    <!--<span class="glyphicon glyphicon-upload"></span> 上传-->
+    <!--</button>-->
+    <!--<button type="button" class="btn btn-danger btn-xs btn-rounded" ng-click="delImage(k,v)"-->
+    <!--show-role="'{{disabledRole}}'">-->
+    <!--<span class="glyphicon glyphicon-trash"></span> 移除-->
+    <!--</button>-->
+    <!--</div>-->
+    <!--</td>-->
+    <!--</tr>-->
+    <!--</tbody>-->
+    <!--</table>-->
     <div ng-class="{'hide':disabled}">
         <div class="form-group">
             <!--上传过程:-->
@@ -103,8 +216,12 @@
                         ng-disabled="!uploader.queue.length">
                     <span class="glyphicon glyphicon-trash"></span> 全部移除
                 </button>
-                <button type="button" class="btn btn-warning btn-rounded" ng-click="log()">
-                    <span class="glyphicon glyphicon-add"></span> log
+                <button type="button" class="btn btn-primary btn-rounded" ng-click="img_min = !img_min">
+                    <span class="glyphicon"
+                          ng-class="{'glyphicon-zoom-in':img_min,'glyphicon-zoom-out':!img_min}"></span>图片缩放
+                </button>
+                <button type="button" class="btn btn-warning btn-rounded" ng-click="log()" show-role="admin">
+                    <span class="glyphicon glyphicon-paperclip"></span> 开发日志
                 </button>
             </div>
         </div>
